AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/ingress/components/sas-workflow-definition-history/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /workflowDefinition/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-workflow-definition
    sas.com/admin: namespace
  name: sas-workflow-definition
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-workflow-definition
          servicePort: 80
        path: /workflowDefinition

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /workflowHistory/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-workflow-history
    sas.com/admin: namespace
  name: sas-workflow-history
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-workflow-history
          servicePort: 80
        path: /workflowHistory
